--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property='og:type' content='siteweb' />
     <meta property='og:image' content='_____________' />
     <meta property='og:url' content='_____________' />
-    <title><?= $pageTitle; ?></title>
+    <title>Choix du condamné</title>
 </head>
 
 <body>
@@ -28,25 +28,20 @@
         <header class="container-fluid">
             <div class="row">
                 <div class="col-12 fs-2 text-center">
-                    <?= $pageTitle ?>
+                    Choix du condamné
                 </div>
             </div>
         </header>
     </header>
     <main class="container-fluid">
-        <div class="row mt-5 boxExercice">
+        <div class="row mt-5 boxExercice text-center">
             <div class="col-12 fs-3">
                 Tirage au sort du prochain qui part au piloris...
             </div>
         </div>
         <div class="row">
             <div class="col-12 pt-5 text-center">
-                <form class="row text-center" action="index.php" method="post">
-                    <input type="hidden" name="launch" value="ok">
-                    <div class="col-12">
-                    <button id="btnChoose" class="btn bg-warning">Choisir le sacrifié</button>
-                    </div>
-                </form>
+                <button id="btnChoose" class="btn bg-warning">Choisir le sacrifié</button>
             </div>
             <div id="returnChosen" class="col-12 pt-5 text-center fs-1"></div>
         </div>
@@ -62,8 +57,9 @@
             <div class="col-3"><a href="contact.php">Nous contacter</a></div>
         </div>
     </footer>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous'>
-    </script>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js'
+        integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous'>
+        </script>
     <script src='script.js'></script>
 </body>
 
