--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
     <header>
         <header class="container-fluid">
             <div class="row">
-                <div class="col-12 fs-2 text-center">
-                    Choix du condamné
+                <div class="col-12 pt-5 fs-1 text-center">
+                    <h1>Qui subira le sacrifice ?</h1>
                 </div>
             </div>
         </header>
     </header>
     <main class="container-fluid">
-        <div class="row mt-5 boxExercice text-center">
-            <div class="col-12 fs-3">
-                Tirage au sort du prochain qui part au piloris...
-            </div>
-        </div>
         <div class="row">
             <div class="col-12 pt-5 text-center">
-                <button id="btnChoose" class="btn bg-warning">Choisir le sacrifié</button>
+                <button id="btnChoose" class="btn bg-warning">Lancer la roue du sacrifice</button>
             </div>
-            <div id="returnChosen" class="col-12 pt-5 text-center fs-1"></div>
+            <div class="col-12 pt-5 text-center fs-1">
+                <div class="row">
+                    <div id="textChosen" class="col-7 align-self-center"></div>
+                    <div id="nameChosen" class="col-5 align-self-center text-start"></div>
+                </div>
+            </div>
         </div>
     </main>
 
