--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <main class="container-fluid">
         <div class="row">
             <div class="col-12 pt-5 text-center">
-                <button id="btnChoose" class="btn bg-warning">Lancer la roue du sacrifice</button>
+                <button id="btnChoose" class="btn bg-warning">Lancer la roue</button>
             </div>
             <div class="col-12 pt-5 text-center fs-1">
                 <div class="row">
-                    <div id="textChosen" class="col-7 align-self-center"></div>
-                    <div id="nameChosen" class="col-5 align-self-center text-start"></div>
+                    <div id="textChosen" class="col-12 col-md-7 align-self-center"></div>
+                    <div id="nameChosen" class="col-12 col-md-5 align-self-center text-start"></div>
                 </div>
             </div>
         </div>
