--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <header class="container-fluid">
             <div class="row">
-                <div class="col-12 pt-5 fs-1 text-center">
+                <div class="col-12 pt-5 text-center">
                     <h1>Qui subira le sacrifice ?</h1>
                 </div>
             </div>
