--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Choix du condamné</title>
     <style type="text/css">
         text {
-            font-size: 30px;
+            font-size: 20px;
             pointer-events: none;
             color: #740000;
         }
@@ -43,7 +43,7 @@
     </header>
     <main class="container-fluid">
         <div class="row">
-            <div id="chart" class="col-12 col-md-6 text-center"></div>
+            <div id="chart" class="col-12 col-md-6 pt-5 text-center"></div>
             <div id="question" class="col-12 col-md-6 pt-5 text-center align-self-center">
                 <h1></h1>
             </div>
@@ -54,8 +54,8 @@
             <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
             <script type="text/javascript" charset="utf-8">
                 var padding = { top: 0, right: 0, bottom: 0, left: 0 },
-                    w = 500 - padding.left - padding.right,
-                    h = 500 - padding.top - padding.bottom,
+                    w = 300 - padding.left - padding.right,
+                    h = 300 - padding.top - padding.bottom,
                     r = Math.min(w, h) / 2,
                     rotation = 0,
                     oldrotation = 0,
