--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </header>
     <main class="container-fluid">
         <div class="row">
-            <div id="chart" class="col-12 col-md-6 pt-5 text-center"></div>
-            <div id="question" class="col-12 col-md-6 pt-5 text-center align-self-center">
+            <div id="chart" class="col-12 col-md-6 pt-5 text-md-end"></div>
+            <div id="question" class="col-12 col-md-6 pt-5 text-md-start align-self-center">
                 <h1></h1>
             </div>
 
@@ -192,7 +192,7 @@
                     .attr("y", 15)
                     .attr("text-anchor", "middle")
                     .text("Sacrifier")
-                    .style({ "font-weight": "bold", "font-size": "30px" });
+                    .style({ "font-weight": "bold", "font-size": "25px" });
 
 
                 function rotTween(to) {
@@ -221,6 +221,8 @@
                 }
 
             </script>
+        </div>
+    </main>
 </body>
 
 </html>
