--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </header>
     <main class="container-fluid">
         <div class="row">
-            <div id="chart" class="col-12 col-md-6 pt-5 text-md-end"></div>
-            <div id="question" class="col-12 col-md-6 pt-5 text-md-start align-self-center">
+            <div id="chart" class="col-12 col-md-6 pt-5 text-center text-md-end"></div>
+            <div id="question" class="col-12 col-md-6 pt-5 text-center text-md-start align-self-center">
                 <h1></h1>
             </div>
 
