--- a/index.html
+++ b/index.html
@@ -223,6 +223,16 @@
             </script>
         </div>
     </main>
+
+    <!------------- FOOTER --------->
+    <footer class="container-fluid fixed-bottom">
+        <div class="row copyright">
+            <div class="col-3"><a href="copyright.php">&#169;FERRARIOLoïc-2022</a></div>
+            <div class="col-3"><a href="confidence.php">Déclaration de confidentialité</a></div>
+            <div class="col-3"><a href="legal.php">Mentions légales</a></div>
+            <div class="col-3"><a href="contact.php">Nous contacter</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
