--- a/index.html
+++ b/index.html
@@ -227,10 +227,8 @@
     <!------------- FOOTER --------->
     <footer class="container-fluid fixed-bottom">
         <div class="row copyright">
-            <div class="col-3"><a href="copyright.php">&#169;FERRARIOLoïc-2022</a></div>
-            <div class="col-3"><a href="confidence.php">Déclaration de confidentialité</a></div>
-            <div class="col-3"><a href="legal.php">Mentions légales</a></div>
-            <div class="col-3"><a href="contact.php">Nous contacter</a></div>
+            <div class="col-6 text-start"><a href="copyright.php">&#169;FERRARIOLoïc-2022</a></div>
+            <div class="col-6 text-end"><a href="contact.php">Nous contacter</a></div>
         </div>
     </footer>
 </body>
